# nemo

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
asr_benchmark/: config.py  lora_adapter.py  manifest.py  nemo_adapter.py  score.py
asr_benchmark/assets/: asr_adaptation.yaml
data-demo/phonetic/: submission_format.jsonl  utterance_metadata.jsonl
data-demo/phonetic/audio/: U_1c8757065e355c35.flac
data-demo/word/: submission_format.jsonl
data-demo/word/audio/: U_501da13b69bdef24.flac  U_a61a29f276533ee2.flac
notebooks/: orthographic.ipynb  orthographic_config.py  phonetic.ipynb  train_orthographic.py
orthographic_submission/: main.py
phonetic_submission/: main.py
